# rp2040_wifi_freertos_template

./: CMakeLists.txt  FreeRTOSConfig.cmake  LICENSE  README.md  lwipopts.h  rp2040_wifi_freertos_template.cpp
.github/workflows/: ci.yml
.windsurf/rules/: 01-geral.md  02-security.md  03-database.md  04-log_debug.md  05-builds.md  06-dependencies.md  07-documentation.md  08-firmware.md  09-scripts.md
lib/: CMakeLists.txt
lib/log_vt100/: README.md  log_vt100.c  log_vt100.h
tasks/: CMakeLists.txt  network_poll_task.c  network_poll_task.h
